[gd_scene load_steps=8 format=1]

[ext_resource path="res://main/settings.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 14
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="Animation" id=5]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}

[node name="settings" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1280.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 224.0
margin/right = 226.0
margin/bottom = 270.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel" type="Panel" parent="."]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 272.0
margin/right = 1224.0
margin/bottom = 584.0

[node name="instructions" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 288.0
margin/right = 120.0
margin/bottom = 302.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.533333, 0.533333, 0.533333, 1 )
text = "Controls are: WASD or Cursor Keys or left stick to move, space or primary controller button to fire."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="column_a" type="Container" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 320.0
margin/right = 640.0
margin/bottom = 576.0

[node name="label_fullscreen" type="Label" parent="column_a"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 16.0
margin/right = 0.0
margin/bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "FULLSCREEN:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_bgm_mode" type="Label" parent="column_a"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 64.0
margin/right = 0.0
margin/bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "BACKGROUND MUSIC MODE:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_bgm_volume" type="Label" parent="column_a"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 112.0
margin/right = 0.0
margin/bottom = 146.0
custom_fonts/font = SubResource( 3 )
text = "BACKGROUND MUSIC VOLUME:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="column_b" type="Container" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 656.0
margin/top = 320.0
margin/right = 1216.0
margin/bottom = 576.0

[node name="checkbox_fullscreen" type="CheckBox" parent="column_b"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 104.0
margin/bottom = 50.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "ON"
flat = false
align = 0

[node name="option_bgm" type="OptionButton" parent="column_b"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 64.0
margin/right = 199.0
margin/bottom = 98.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="slider_bgm_volume" type="HSlider" parent="column_b"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 122.0
margin/right = 200.0
margin/bottom = 138.0
range/min = 0.0
range/max = 1.0
range/step = 0.05
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="reset_highscores" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 535.0
margin/top = 496.0
margin/right = 745.0
margin/bottom = 548.0
custom_fonts/font = SubResource( 4 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESET HIGHSCORES"
flat = false

[node name="back_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 608.0
margin/right = 274.0
margin/bottom = 660.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "menu"


